@@ -6,6 +6,9 @@
 # @param bootup
 # @param res_col
 # @param move_to_col
+#   * By default, undef will add the code `"echo -en \\033[${RES_COL}G"` to
+#     /etc/sysconfig/init
+#   * Optional string of code will be substituted if included
 # @param setcolor_success
 # @param setcolor_failure
 # @param setcolor_warning
@@ -15,14 +18,27 @@
 # @param prompt
 # @param autoswap
 #
+#For all `setcolor` variables, use the following color options as a string:
+#   * default
+#   * black
+#   * red
+#   * green
+#   * yellow
+#   * blue
+#   * magenta
+#   * cyan
+#   * white
+#
+# author: SIMP Team <simp@simp-project.com>
+#
 class useradd::sysconfig_init (
   Useradd::Bootup      $bootup            = 'color',
   Integer              $res_col           = 60,
-  String               $move_to_col       = "\"echo -en \\\\033[\${RES_COL}G\"",
-  String               $setcolor_success  = "\"echo -en \\\\033[0;32m\"",
-  String               $setcolor_failure  = "\"echo -en \\\\033[0;31m\"",
-  String               $setcolor_warning  = "\"echo -en \\\\033[0;33m\"",
-  String               $setcolor_normal   = "\"echo -en \\\\033[0;39m\"",
+  Optional[String]     $move_to_col       = undef,
+  String               $setcolor_success  = 'green',
+  String               $setcolor_failure  = 'red',
+  String               $setcolor_warning  = 'yellow',
+  String               $setcolor_normal   = 'default',
   Stdlib::AbsolutePath $single_user_login = '/sbin/sulogin',
   Integer[1,8]         $loglvl            = 3,
   Boolean              $prompt            = false,
